--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
       margin-bottom: 30px;
       color: #d81b60;
     }
+    h2 {
+      font-size: 2em;
+      margin-bottom: 10px;
+      color: #c2185b;
+      animation: glowPulse 2s infinite alternate;
+    }
+    @keyframes glowPulse {
+      0% {
+        text-shadow: 0 0 5px #ff80ab, 0 0 10px #ff4081, 0 0 20px #f50057;
+        transform: scale(1);
+      }
+      100% {
+        text-shadow: 0 0 10px #ff80ab, 0 0 20px #ff4081, 0 0 40px #f50057;
+        transform: scale(1.05);
+      }
+    }
     button {
       background: #ff4081;
       color: white;
@@ -55,6 +71,7 @@
   </style>
 </head>
 <body>
+  <h2>Happy year and a half ❤️</h2>
   <h1>Do you love me? 💕</h1>
   <button id="yesBtn">Yes 💖</button>
   <button id="noBtn">No 😒</button>
